tal-todo/templates/db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mongo
  #namespace: todo 
  labels:
    type: db
    app: todo

spec:
  replicas: 1
  selector:
    matchLabels:
      type: db
      app: todo
  template:
    metadata:
      labels:
        type: db
        app: todo
    spec:
      volumes:
      - name: db-volume 
        hostPath:
          path: /mongo-pv/ 

      containers:
      - name: todo-mongo 
        image: mongo:4.4
        volumeMounts:
        - name: db-volume
          mountPath: /data/db 
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "64Mi" 
            cpu: "250m" 
          limits:
            memory: "128Mi" 
            cpu: "500m"
